tests/badinc.out
./badinc.svx:3: error: Couldn't open file "nonexistent_file"
cavern: error: No survey data
