tests/badinc.svx
; include of a non-existant file
*include non_existant_file
